2008-11-14  Dustin J. Mitchell <dustin@zmanda.com>
	* autogen: revert glib's configure-time requirement for
	  pkg-config-0.16

2008-11-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.h: Improve comment.
	* server-src/reporter.c: Print holding disk size in displyaunit.

2008-09-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Parse dumpsize from taper result.

2008-09-26  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/selfcheck.c: Set qdevice on common_exit path.

2008-09-16 Dan Locks <dwlocks@zmanda.com>
	* packaging/rpm/amanda.spec:  Added detection of CentOS 4 and 5 as 
	  suggested by dswartz.  added graceful failure when Distro/version is 
	  not detected correctly

2008-08-28  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Reset the MESG buffer for a new dump.

2008-08-25 Dan Locks <dwlocks@zmanda.com>
	* packaging/deb/changelog: Update debian package changelog and version
	  to 2.6.0p2.  Dpkg picks up the package version number from this file.

2008-08-22  Jean-Louis Martineau <martineau@zmanda.com>
	* configure.in, packaging/deb/rules,
	  packaging/deb/buildpkg, packaging/rpm/buildpkg,
	  packaging/rpm/amanda.spec: Change release to 2.6.0p2
	* NEWS: News in 2.6.0p2

2008-08-22  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/amglue/bigint.c: add #include "stdint.h"

2008-08-22  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c (tape): Correctly print next tape to use.
	* server-src/tapefile.c (print_new_tapes): New function to print new
	                                           tapes.
	* server-src/tapefile.h (print_new_tapes): Prototype.
	* server-src/reporter.c: Correctly print next tape to use.

2008-08-22  Dustin J. Mitchell <dustin@zmanda.com>
	Thanks to Stefan G. Weichinger <sgw@amanda.org>
	* server-src/taper.c: check errors from device, and handle them by
	  either requesting a new tape or just using the next tape in the
	  changer
