@@ -707,6 +707,16 @@ while($lineX = <AMDUMP>) {
 			$ntsize{$nb_tape} = 0;
 			$ntesize{$nb_tape} = 0;
 		}
+		elsif($line[1] eq "using") {
+			#1:"using" #2:"label" #3:`label' #4:date #5 `timestamp'
+			$nb_tape++;
+			$lineX =~ /using label `(\S*)'/;
+			$label = $1;
+			$ntlabel{$nb_tape} = $label;
+			$ntpartition{$nb_tape} = 0;
+			$ntsize{$nb_tape} = 0;
+			$ntesize{$nb_tape} = 0;
+		}
 	}
    elsif($line[0] eq "splitting" &&
 			 $line[1] eq "chunk" &&
